Docker - added role to setup orbstack

--- a/group_vars/all/vars.yaml
+++ b/group_vars/all/vars.yaml
@@ -2,7 +2,10 @@ git_user_name: Timothee Simon-Franza
 git_user_email:
 default_roles:
   - ssh
-  # - nvim
+  - homebrew
+  - docker
+  - iterm2
+  - nvim
 
 ssh_key:
   id_ed5119:
