ssh - Added task to ensure the .ssh/ directory exists.

--- a/roles/ssh/tasks/darwin.yml
+++ b/roles/ssh/tasks/darwin.yml
@@ -1,4 +1,9 @@
 ---
+- name: ensure the .ssh directory exists.
+  file:
+    path: "{{ ansible_user_dir }}/.ssh"
+    state: directory
+
 - name: Copy SSH keys
   copy:
     dest: "{{ ansible_user_dir }}/.ssh/{{ ssh_key_item.key }}"
