--- a/roles/iterm2/tasks/darwin.yml
+++ b/roles/iterm2/tasks/darwin.yml
@@ -70,5 +70,5 @@
 - name: Create hushlogin file
   ansible.builtin.file:
     path: "{{ ansible_user_dir }}/.hushlogin"
-    state: file
+    state: touch
 
