iterm2 - updated zshrc path

--- a/roles/iterm2/tasks/darwin.yml
+++ b/roles/iterm2/tasks/darwin.yml
@@ -52,7 +52,7 @@
 
 - name: Copy .zshrc
   ansible.builtin.copy:
-    dest: "{{ ansible_user_dir }}/.zshrc.local"
+    dest: "{{ ansible_user_dir }}/.zshrc"
     src: "{{ role_path }}/files/.zshrc"
     mode: 'u=rw,go=r'
 
