terminal - rename iterm2 role to terminal. Switch to kitty

--- a/roles/terminal/tasks/darwin.yml
+++ b/roles/terminal/tasks/darwin.yml
@@ -1,7 +1,7 @@
 ---
-- name: Install iterm2
+- name: Install kitty
   community.general.homebrew_cask:
-    name: iterm2
+    name: kitty
     state: present
 
 - name: Tap the cask-fonts Homebrew repository
