--- a/roles/terminal/tasks/darwin.yml
+++ b/roles/terminal/tasks/darwin.yml
@@ -4,6 +4,15 @@
     name: kitty
     state: present
 
+- name: Copy kitty configuration files
+  ansible.builtin.file:
+    src: "{{ role_path }}/files/{{ item }}"
+    dest: "{{ ansible_user_dir }}/.config/kitty/{{ item }}"
+    state: link
+  loop:
+    - kitty.conf
+    - gruvbox_kitty_theme.conf
+
 - name: Tap the cask-fonts Homebrew repository
   community.general.homebrew_tap:
     name: homebrew/cask-fonts
