Terminal - fixed typo

--- a/roles/terminal/files/kitty.conf
+++ b/roles/terminal/files/kitty.conf
@@ -17,7 +17,7 @@ bold_italic_font auto
 font_size 13.0
 
 #: Color scheme
-include ./gruvox_kitty_theme.conf
+include ./gruvbox_kitty_theme.conf
 
 # Clipboard
 map super+v             paste_from_clipboard
