--- a/roles/terminal/tasks/darwin.yml
+++ b/roles/terminal/tasks/darwin.yml
@@ -9,6 +9,7 @@
     src: "{{ role_path }}/files/{{ item }}"
     dest: "{{ ansible_user_dir }}/.config/kitty/{{ item }}"
     state: link
+    force: true
   loop:
     - kitty.conf
     - gruvbox_kitty_theme.conf
