--- a/group_vars/all/vars.yaml
+++ b/group_vars/all/vars.yaml
@@ -3,9 +3,11 @@ git_user_email:
 default_roles:
   - ssh
   - homebrew
+  - applications
   - docker
   - terminal
   - nvim
+  - dock
 
 ssh_key:
   id_ed5119:
