--- a/roles/applications/tasks/darwin.yml
+++ b/roles/applications/tasks/darwin.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install {{ item }}
+- name: "Install {{ item }}"
   community.general.homebrew_cask:
     name: {{ item }}
     state: latest
