--- a/roles/dock/tasks/dock-add.yml
+++ b/roles/dock/tasks/dock-add.yml
@@ -13,7 +13,7 @@
   when: dockitem_exists.rc == 0
 
 - name: Ensure Dock item {{ item.name | default(item) }} exists.
-  ansible.builtin.command: "dockutil --add '{{ item.path }}' --label '{{ item.name }}' --type '{{ item.type }}'"
+  ansible.builtin.command: "dockutil --add '{{ item.path }}' --label '{{ item.name }}'"
   when: dockitem_exists.rc > 0 or
         dockitem_exists.rc == 0 and current_section == 'recent-apps'
 
