--- a/roles/dock/tasks/dock-position.yml
+++ b/roles/dock/tasks/dock-position.yml
@@ -1,5 +1,5 @@
 ---
-- name: Check the current Dock position of {{ item.name | default(item) }}.
+- name: "Check the current Dock position of {{ item.name | default(item) }}."
   ansible.builtin.command:
     cmd: dockutil --find '{{ item.name | default(item) }}'
   register: dock_item_position
