--- a/roles/applications/tasks/darwin.yml
+++ b/roles/applications/tasks/darwin.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Install {{ item }}"
   community.general.homebrew_cask:
-    name: {{ item }}
+    name: "{{ item }}"
     state: latest
   loop: "{{ homebrew_cask }}"
 
