kitty - updated theme

--- a/roles/terminal/files/gruvbox_kitty_theme.conf
+++ b/roles/terminal/files/gruvbox_kitty_theme.conf
@@ -33,10 +33,11 @@ cursor_text_color       #665c54
 cursor_shape            block
 cursor_blink_interval   0
 
-background_opacity      0.8
-background_blur         40
+background_opacity      0.85
+background_blur         35
 hide_window_decorations no
 macos_titlebar_color    background
+window_padding_width 8
 
 # Visual bell duration. Flash the screen when a bell occurs for the specified number of
 # seconds. Set to zero to disable.
