--- a/roles/applications/tasks/darwin.yml
+++ b/roles/applications/tasks/darwin.yml
@@ -16,3 +16,6 @@
     state: present
   loop: "{{ mas }}"
 
+- name: "Add specified applications to login items to run on startup"
+  shell: osascript -e 'tell application "System Events" to make login item at end with properties {path: "{{ item.path }}", hidden: "{{ item.hidden }}"}'
+  loop: "{{ run_at_login }}"
