Applications - Fixed login item setup task

--- a/roles/applications/defaults/main.yml
+++ b/roles/applications/defaults/main.yml
@@ -16,7 +16,7 @@ run_at_login:
     hidden: false
 
   - name: soundsource
-    path: /Applications/SoundSource.app/So
+    path: /Applications/SoundSource.app/
     hidden: false
 
   - name: amphetamine
