tmux - moved tpm folder to .config path

--- a/roles/tmux/files/.tmux.conf
+++ b/roles/tmux/files/.tmux.conf
@@ -26,4 +26,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initializes the Tmux Plugin Manager (keep this line at the very bottom of this file)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/.tmux/plugins/tpm/tpm'
