--- a/roles/git/tasks/darwin.yml
+++ b/roles/git/tasks/darwin.yml
@@ -25,7 +25,7 @@
 
 - name: Check if ssh key exists
   ansible.builtin.stat:
-    path: "{{ ansible_user_dir}}/.ssh/id_ed25519.pub"
+    path: "{{ ansible_user_dir }}/.ssh/id_ed25519.pub"
   register: git_signing_key
     
 - name: Set user.signingkey
@@ -33,7 +33,7 @@
     name: user.signingkey
     scope: global
     value: "{{ ansible_user_dir }}/.ssh/id_ed25519.pub"
-  when: git_signing_key.exists
+  when: git_signing_key.stat.exists
 
 - name: Set gpg.format
   community.general.git_config:
@@ -67,7 +67,7 @@
  
 - name: Copy commit message template file
   ansible.builtin.copy:
-    src: commit_msg_template
+    src: "{{ role_path }}/files/commit_msg_template"
     dest: "{{ ansible_user_dir }}/.config/git/commit_msg_template"
     mode: "0600"
 
