--- a/roles/ssh/tasks/darwin.yml
+++ b/roles/ssh/tasks/darwin.yml
@@ -8,6 +8,7 @@
   copy:
     dest: "{{ ansible_user_dir }}/.ssh/{{ ssh_key_item.key }}"
     content: "{{ ssh_key_item.value }}"
+    mode: "0600"
   no_log: true
   loop_control:
     loop_var: ssh_key_item
