--- a/roles/terminal/tasks/darwin.yml
+++ b/roles/terminal/tasks/darwin.yml
@@ -4,6 +4,12 @@
     name: kitty
     state: present
 
+- name: Create kitty config directory if it's missing
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.config/kitty"
+    recurse: true
+    state: directory
+
 - name: Copy kitty configuration files
   ansible.builtin.file:
     src: "{{ role_path }}/files/{{ item }}"
