--- a/roles/git/tasks/darwin.yml
+++ b/roles/git/tasks/darwin.yml
@@ -67,7 +67,7 @@
  
 - name: Copy commit message template file
   ansible.builtin.copy:
-    src: "{{ role_path }}/files/commit_msg_template"
+    src: "{{ role_path }}/files/.commit_msg_template"
     dest: "{{ ansible_user_dir }}/.config/git/commit_msg_template"
     mode: "0600"
 
