--- a/roles/git/tasks/darwin.yml
+++ b/roles/git/tasks/darwin.yml
@@ -68,11 +68,11 @@
 - name: Copy commit message template file
   ansible.builtin.copy:
     src: "{{ role_path }}/files/.commit_msg_template"
-    dest: "{{ ansible_user_dir }}/.config/git/commit_msg_template"
+    dest: "{{ ansible_user_dir }}/.config/git/.commit_msg_template"
     mode: "0600"
 
 - name: Set commit.template
   community.general.git_config:
     name: commit.message
     scope: global
-    value: "{{ ansible_user_dir }}/.config/git/commit_msg_template"
+    value: "{{ ansible_user_dir }}/.config/git/.commit_msg_template"
