Random commit, don't know what there's in here but I'm tired as hell good luck

--- a/group_vars/mbp/vars.yaml
+++ b/group_vars/mbp/vars.yaml
@@ -1,16 +1,8 @@
 git_user_name: Timothee Simon-Franza
 git_user_email:
 default_roles:
-  - python
-  # - ssh
   # - homebrew
-  # - applications
-  # - docker
-  # - terminal
-  # - nvim
-  # - dock
-  # - firewall
-  # - finder
+  - rstudio
 
 ssh_key:
   id_ed25519:
