--- a/roles/terminal/tasks/darwin.yml
+++ b/roles/terminal/tasks/darwin.yml
@@ -40,6 +40,11 @@
     name: eza
     state: present
 
+- name: Install fzf
+  community.general.homebrew:
+    name: fzf
+    state: present
+
 - name: Check if oh-my-zsh is installed
   stat:
     path: "{{ ansible_user_dir }}/.oh-my-zsh"
