--- a/roles/tmux/files/.tmux.conf
+++ b/roles/tmux/files/.tmux.conf
@@ -7,8 +7,8 @@ bind-key m resize-pane -Z
 # Rebind window splitting keybindings
 unbind-key %
 unbind-key '"'
-bind-key _ split-window -h
-bind-key - split-window -v
+bind-key _ split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 
 
 # Use vim keybindings for navigation between the panes.
