Added fedora setup task for nvim role

--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -5,3 +5,10 @@
   tags:
     - nvim
     - neovim
+
+- name: Run Fedora tasks
+  ansible.builtin.import_tasks: fedora.yml
+  when: ansible_os_family == 'RedHat'
+  tags:
+    - nvim
+    - neovim
