TMUX : updated config to use catpuccin as status line.

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -4,12 +4,15 @@ set -g prefix C-a
 # Use <Leader>m to toggle on/off full-pane mode.
 bind-key m resize-pane -Z
 
+# Enable mouse
+set -g mouse on
+set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
+
 # Rebind window splitting keybindings
 unbind-key %
 unbind-key '"'
 bind-key _ split-window -h -c "#{pane_current_path}"
 bind-key - split-window -v -c "#{pane_current_path}"
-
 
 # Use vim keybindings for navigation between the panes.
 setw -g mode-keys vi
@@ -19,11 +22,12 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # Import theme configuration file
-source-file ~/.config/.tmux-theme.conf
+source-file ~/.config/tmux/theme.conf
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
 
 # Initializes the Tmux Plugin Manager (keep this line at the very bottom of this file)
-run '~/.config/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm'
