--- a/roles/tmux/tasks/darwin.yml
+++ b/roles/tmux/tasks/darwin.yml
@@ -5,19 +5,25 @@
     state: present
 
 - name: "Install TPM"
-  ansible.builtin.git:
+  git:
     repo: https://github.com/tmux-plugins/tpm
     dest: ~/.tmux/plugins/tpm
 
+- name: "Ensure the tmux config directory exists"
+  file:
+    path: "{{ ansible_user_dir }}/.config/tmux"
+    state: "directory"
+    mode: 0644
+
 - name: "Copy tmux config file"
-  ansible.builtin.copy:
-    src: "{{ role_path }}/files/.tmux.conf"
-    dest: "{{ ansible_user_dir }}/.config/"
+  copy:
+    src: "{{ role_path }}/files/tmux.conf"
+    dest: "{{ ansible_user_dir }}/.config/tmux"
     mode: 0644
 
 - name: "Copy tmux theme file"
-  ansible.builtin.copy:
-    src: "{{ role_path }}/files/.tmux-theme.conf"
-    dest: "{{ ansible_user_dir }}/.config/"
+  copy:
+    src: "{{ role_path }}/files/theme.conf"
+    dest: "{{ ansible_user_dir }}/.config/tmux"
     mode: 0644
 
