--- a/roles/tmux/tasks/fedora.yml
+++ b/roles/tmux/tasks/fedora.yml
@@ -1,23 +1,29 @@
 ---
-- name: Install tmux
+- name: "Install tmux"
   dnf:
     name: tmux
     state: present
   become: yes
 
-- name: Install TPM
+- name: "Install TPM"
   git:
     repo: https://github.com/tmux-plugins/tpm
     dest: ~/.tmux/plugins/tpm
 
-- name: Copy tmux config file
-  copy:
-    src: "{{ role_path }}/files/.tmux.conf"
-    dest: "{{ ansible_user_dir }}/.config/"
+- name: "Ensure the tmux config directory exists"
+  file:
+    path: "{{ ansible_user_dir }}/.config/tmux"
+    state: "directory"
     mode: 0644
 
-- name: Copy tmux theme file
+- name: "Copy tmux config file"
   copy:
-    src: "{{ role_path }}/files/.tmux-theme.conf"
-    dest: "{{ ansible_user_dir }}/.config/"
+    src: "{{ role_path }}/files/tmux.conf"
+    dest: "{{ ansible_user_dir }}/.config/tmux"
+    mode: 0644
+
+- name: "Copy tmux theme file"
+  copy:
+    src: "{{ role_path }}/files/theme.conf"
+    dest: "{{ ansible_user_dir }}/.config/tmux"
     mode: 0644
