--- a/roles/nvim/tasks/darwin.yml
+++ b/roles/nvim/tasks/darwin.yml
@@ -15,14 +15,12 @@
     state: latest
 
 - name: Setup config folder
-  ansible.builtin.file:
+  file:
     mode: "0755"
     path: "{{ ansible_user_dir }}/.config/nvim"
     state: directory
 
-- name: Create symlink to role files directory
-  ansible.builtin.file:
-    src: "{{ role_path }}/files"
-    dest: "{{ ansible_user_dir }}/.config/nvim"
-    state: link
-    force: true
+- name: Copy nvim configuration files
+  copy:
+    src: "{{ role_path }}/files/"
+    dest: "{{ ansible_user_dir }}/.config/nvim/"
