--- a/roles/nvim/tasks/fedora.yml
+++ b/roles/nvim/tasks/fedora.yml
@@ -22,9 +22,7 @@
     path: "{{ ansible_user_dir }}/.config/nvim"
     state: directory
 
-- name: Create symlink to role files directory
-  ansible.builtin.file:
-    src: "{{ role_path }}/files"
-    dest: "{{ ansible_user_dir }}/.config/nvim"
-    state: link
-    force: true
+- name: Copy nvim configuration files
+  copy:
+    src: "{{ role_path }}/files/"
+    dest: "{{ ansible_user_dir }}/.config/nvim/"
